[gd_scene load_steps=21 format=2]

[ext_resource path="res://font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Singleton.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 75.0
content_margin_top = 50.0
bg_color = Color( 0.101961, 0.101961, 0.101961, 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="CapsuleShape" id=6]

[sub_resource type="OpenSimplexNoise" id=7]
octaves = 9
period = 0.1
persistence = 1.0
lacunarity = 4.0

[sub_resource type="NoiseTexture" id=8]
bump_strength = 6.3
noise = SubResource( 7 )

[sub_resource type="SpatialMaterial" id=9]
albedo_texture = SubResource( 8 )

[sub_resource type="CapsuleMesh" id=10]
material = SubResource( 9 )

[sub_resource type="SphereMesh" id=11]

[sub_resource type="PrismMesh" id=12]

[sub_resource type="BoxShape" id=13]

[sub_resource type="CubeMesh" id=14]

[sub_resource type="OpenSimplexNoise" id=15]

[sub_resource type="NoiseTexture" id=16]
as_normalmap = true
bump_strength = 32.0
noise = SubResource( 15 )

[sub_resource type="SpatialMaterial" id=17]
flags_unshaded = true
albedo_texture = SubResource( 16 )

[sub_resource type="CubeMesh" id=18]

[node name="Spatial" type="Spatial"]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -206.0
margin_top = -252.5
margin_right = 206.0
margin_bottom = 252.5
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Forward  =  W                
Left  =  A                        
Back  =  S                       
Right  =  D                      
Jump  =  Space             
Crouch / Walk = Control           
Run / Glide  =  Shift (hold)
Fly  =  Alt (hold and move)            
Switch Camera  =  Tab 
Pause Menu  =  Escape"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -172.999
margin_top = -64.0
margin_right = -98.9989
margin_bottom = -27.0
custom_fonts/font = SubResource( 3 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 39.0
margin_top = -64.0
margin_right = 175.0
margin_bottom = -27.0
custom_fonts/font = SubResource( 4 )
text = "CLOSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -88.6646
margin_top = -64.0757
margin_right = 29.3354
margin_bottom = -27.0757
custom_fonts/font = SubResource( 5 )
text = "RESET"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KinematicBody" type="KinematicBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.5, 0 )
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1.5, 0 )
visible = false
mesh = SubResource( 10 )
material/0 = null

[node name="Spatial" type="Spatial" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.47417, -0.0662751 )

[node name="MeshInstance2" type="MeshInstance" parent="KinematicBody/Spatial"]
transform = Transform( 0.7, 0, 0, 0, 0.699561, -0.0247837, 0, 0.0247837, 0.699561, 0, 0, 0 )
mesh = SubResource( 11 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="KinematicBody/Spatial/MeshInstance2"]
transform = Transform( 0.142857, 0, 0, 0, -0.285715, 7.7486e-07, 0, -1.04308e-07, -2.14286, 1.08486, -1.20885, -1.94854 )
mesh = SubResource( 12 )
material/0 = null

[node name="Camera" type="Camera" parent="KinematicBody/Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.4 )
far = 2096.0

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 100, 0, 0, 0, 0.1, 0, 0, 0, 100, 0, -0.1, 0 )
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
transform = Transform( 100, 0, 0, 0, 10, 0, 0, 0, 100, -0.0370369, -10.1, 0.0858135 )
mesh = SubResource( 14 )
material/0 = SubResource( 17 )

[node name="StaticBody2" type="StaticBody" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.689772, -1.32309, -17.3906 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/StaticBody2"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/StaticBody2"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
mesh = SubResource( 18 )
material/0 = null

[node name="StaticBody3" type="StaticBody" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.07025, -0.38543, -18.6916 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/StaticBody3"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/StaticBody3"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
mesh = SubResource( 18 )
material/0 = null

[node name="StaticBody4" type="StaticBody" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.89105, 0.0307446, -23.9064 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/StaticBody4"]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0 )
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/StaticBody4"]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0 )
mesh = SubResource( 18 )
material/0 = null

[node name="StaticBody5" type="StaticBody" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.7099, -1.73843, -42.9597 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/StaticBody5"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/StaticBody5"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
mesh = SubResource( 18 )
material/0 = null

[node name="StaticBody6" type="StaticBody" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -28.8967, -1.73843, -32.1104 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/StaticBody6"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/StaticBody6"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
mesh = SubResource( 18 )
material/0 = null

[node name="StaticBody7" type="StaticBody" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15.5383, 72.1449, -77.7778 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/StaticBody7"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/StaticBody7"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
mesh = SubResource( 18 )
material/0 = null

[node name="StaticBody8" type="StaticBody" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -25.5548, 76.3272, -77.7778 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/StaticBody8"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/StaticBody8"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
mesh = SubResource( 18 )
material/0 = null

[node name="StaticBody9" type="StaticBody" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 61.3641, 76.3272, -325.427 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/StaticBody9"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/StaticBody9"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
mesh = SubResource( 18 )
material/0 = null

[node name="StaticBody10" type="StaticBody" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 61.3641, 22.646, 130.039 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/StaticBody10"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/StaticBody10"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
mesh = SubResource( 18 )
material/0 = null

[node name="StaticBody11" type="StaticBody" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 196.422, -293.836, -450.157 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/StaticBody11"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/StaticBody11"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
mesh = SubResource( 18 )
material/0 = null

[node name="StaticBody12" type="StaticBody" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 196.422, -141.062, -228.566 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/StaticBody12"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/StaticBody12"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
mesh = SubResource( 18 )
material/0 = null

[node name="StaticBody13" type="StaticBody" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 175.933, -141.062, -228.566 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/StaticBody13"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/StaticBody13"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
mesh = SubResource( 18 )
material/0 = null

[node name="StaticBody14" type="StaticBody" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 151.758, 271.054, -228.566 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/StaticBody14"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/StaticBody14"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, -0.955017, -0.937317, 0.0666504 )
mesh = SubResource( 18 )
material/0 = null

[node name="StaticBody15" type="StaticBody" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 65.7428, -192.1, -228.566 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/StaticBody15"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/StaticBody15"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
mesh = SubResource( 18 )
material/0 = null

[node name="StaticBody16" type="StaticBody" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 65.7428, 579.063, -228.566 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/StaticBody16"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/StaticBody16"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
mesh = SubResource( 18 )
material/0 = null

[node name="StaticBody17" type="StaticBody" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -520.23, 364.091, -228.566 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/StaticBody17"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/StaticBody17"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
mesh = SubResource( 18 )
material/0 = null

[node name="StaticBody18" type="StaticBody" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -520.23, 189.492, 276.498 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/StaticBody18"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/StaticBody18"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
mesh = SubResource( 18 )
material/0 = null

[node name="StaticBody19" type="StaticBody" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.39423, 561.348, 276.498 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/StaticBody19"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/StaticBody19"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
mesh = SubResource( 18 )
material/0 = null

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.595875, 0.803078, 0, -0.803078, -0.595875, 0, -5.56712, 0 )
shadow_enabled = true
directional_shadow_mode = 0

[connection signal="pressed" from="Label/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Label/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Label/Button3" to="." method="_on_Button3_pressed"]
